首页修改和个人计划修改

--- a/manage_system/common/index.html
+++ b/manage_system/common/index.html
@@ -9,7 +9,6 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="../ok-admin/css/oksub.css" media="all" />
-
     <script src="../ok-admin/lib/layui/layui.js"></script>
     <style>
         .toolbar {
@@ -108,8 +107,9 @@
         </div>
 
         <ul class="layui-fixbar">
-            <li class="layui-icon layui-icon-home" lay-type="home" href="index.html"></li>
-            <li class="layui-icon layui-icon-return" lay-type="return" style="display: list-item;"></li>
+            <a href="/index.html">
+                <li class="layui-icon layui-icon-logout" lay-type="logout" style="display: list-item;"></li>
+            </a>
         </ul>
     </div>
 
