--- a/manage_system/common/myWork/editWork/editPlan.html
+++ b/manage_system/common/myWork/editWork/editPlan.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title id="pageTitle">计划详情</title>
+    <title id="pageTitle">修改计划</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -84,7 +84,7 @@
                     <label class="layui-form-label">标 题</label>
                     <div class="layui-input-block">
                         <input id="title" type="text" name="username" lay-verify="title" autocomplete="off"
-                            class="layui-input" required disabled>
+                            class="layui-input" required >
                     </div>
                 </div>
 
@@ -94,7 +94,13 @@
                 <div class="layui-form-item layui-form-text">
                     <label class="layui-form-label">计划内容</label>
                     <div class="layui-input-block" style="margin:10px;">
-                        <textarea id="textarea" placeholder="内容为空" class="layui-textarea" name="desc" required disabled></textarea>
+                        <textarea id="textarea" placeholder="内容为空" class="layui-textarea" name="text" required></textarea>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-input-block">
+                        <button class="layui-btn login_btn layui-btn-normal" lay-submit lay-filter="editPlan"
+                            style="width:60%">提交修改</button>
                     </div>
                 </div>
             </form>
@@ -139,8 +145,31 @@
                 document.getElementById("title").value=data.body.title;
                 document.getElementById("textarea").value=data.body.text;
                 document.getElementById("username").value=data.body.name;
-                console.log(data.body.name);
             }
+        });
+
+        form.on('submit(editPlan)', function(data){
+            console.log($("#title").val()),
+            $.ajax({
+                url: 'http://localhost:8090/api/updatePlanById',
+                method: 'POST',
+                crossDomain: true,
+                xhrFields: {
+                    withCredentials: true
+                },
+                contentType: "application/json;charset=utf-8",
+                dataType: "json",
+                data: JSON.stringify({
+                    'plan_id': parseInt(storage.getItem('plan_id')),
+                    'title': $("#title").val(),
+                    'text': data.field.text
+                }),
+                success: function(data) {
+                    console.log(data);
+                    window.location.href="/common/myWork/index.html";
+                }
+            });
+            return false;
         });
 
         
