--- a/manage_system/common/myWork/index.html
+++ b/manage_system/common/myWork/index.html
@@ -178,10 +178,12 @@
 
 <script type="text/html" id="allplanOpt">
     <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del">删除</a>
+    <a class="layui-btn layui-btn-xs layui-btn" lay-event="update">编辑</a>
 </script>
 
 <script type="text/html" id="thisplanOpt">
     <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del">删除</a>
+    <a class="layui-btn layui-btn-xs layui-btn" lay-event="update">编辑</a>
 </script>
 
 <script type="text/html" id="allsumOpt">
