--- a/manage_system/common/index.html
+++ b/manage_system/common/index.html
@@ -35,7 +35,7 @@
         }
 
         .content {
-            margin-top: 5%;
+            margin-top: 2%;
 
         }
 
@@ -44,20 +44,49 @@
         }
 
         .layui-btn {
-            padding: 10px;
-            margin: 5% 10% 5% 10%;
-            height: 400px;
-            width: 300px;
             text-align: center;
             color: #fff;
-            font-size: 30px;
+            font-size: 30px; 
+            transform-style: preserve-3d;
+            min-height: 400px;
+            width: 300px;
+            border-radius: 30px;
+            padding: 0rem 5rem;
+            box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
         }
+        
+        .layui-btn:hover{
+            box-shadow: 0px 1rem 2rem 0px rgba(48, 55, 66, 0.15);
+	        transform: translate(0,-5px);
+	        transition-delay: 0s !important;
 
+        }
         .layui-container {
             margin-top: 0%;
         }
-
-
+        .icondiv {
+            margin: 20% auto auto 10% ;
+        }
+        .spandiv{
+            margin-top: 30%;
+        }
+        #organization_box{
+            font-size: 48px;
+            font-weight: 20px;
+            color: rgba(74, 189, 160, 0.45);
+            font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",
+                         Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,
+                          "Apple Color Emoji","Segoe UI Emoji",
+                           "Segoe UI Symbol","Noto Color Emoji";
+        }
+        #name_box{
+            font-size: 50px;
+            color: rgba(0,0,0,.45);
+            font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",
+                         Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,
+                          "Apple Color Emoji","Segoe UI Emoji",
+                           "Segoe UI Symbol","Noto Color Emoji";
+        }
 
         @media (max-width: 571px) {
             .layui-btn {
@@ -82,7 +111,7 @@
     <div class="layui-header">
         <div class="toolbar">
             <div class="nva_title">
-                <span>主 页</span>
+                <span>个 人 主 页</span>
             </div>
         </div>
 
@@ -105,24 +134,36 @@
                 <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
                     <a type="button" class="layui-btn" style="background-color:#96CDED;" href="myWork/index.html">
                         
-                        <span>我的工作</span>
+                        <div class="spandiv">
+                            <span>我的工作</span>
+                        </div>
                         <br><br>
-                        <i class="layui-icon" style="font-size: 120px;">&#xe62a;</i>
+                        <div class="icondiv">
+                            <i class="layui-icon" style="font-size: 120px;">&#xe62a;</i>
+                        </div>
                     </a>
                 </div>
 
                 <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
                     <a type="button" class="layui-btn" style="background-color:#66ACD5;" href="assessmentResult/index.html">
-                        <span>考核结果</span>
+                        <div class="spandiv">
+                            <span>考核结果</span>
+                        </div>
                         <br><br>
-                        <i class="layui-icon" style="font-size: 120px;">&#xe63c;</i>
+                        <div class="icondiv">
+                            <i class="layui-icon" style="font-size: 120px;">&#xe63c;</i>
+                        </div>
                     </a>
                 </div>
                 <div class="layui-col-xs4 layui-col-sm4 layui-col-md4">
                     <a type="button" class="layui-btn" style="background-color:#7FBAF2;"  href="myInfo/index.html">
-                        <span>信息设置</span>
+                        <div class="spandiv">
+                            <span>信息设置</span>
+                        </div>
                         <br><br>
-                        <i class="layui-icon" style="font-size: 120px;">&#xe620;</i>
+                        <div class="icondiv">
+                            <i class="layui-icon" style="font-size: 120px;">&#xe620;</i>
+                        </div>
                     </a>
                 </div>
             </div>
