--- a/manage_system/management/index.html
+++ b/manage_system/management/index.html
@@ -36,7 +36,7 @@
                 </a>
             </li>
             <li class="no-line layui-nav-item">
-                <a href="../common/myInfo/index.html">
+                <a href="../common/index.html">
                     <span id="name"></span>
                 </a>
                 <dl id="userInfo" class="layui-nav-child">
